--- a/app/src/main/res/layout-large/fragment_main.xml
+++ b/app/src/main/res/layout-large/fragment_main.xml
@@ -25,7 +25,7 @@
             android:fontFamily="sans-serif-medium"
             android:gravity="fill_horizontal"
             android:textColor="@android:color/white"
-            android:textSize="25sp"
+            android:textSize="30sp"
             android:textStyle="bold"></TextView>
 
         <GridView
@@ -38,7 +38,7 @@
             android:gravity="center"
             android:horizontalSpacing="0dp"
             android:listSelector="@android:color/transparent"
-            android:numColumns="auto_fit"
+            android:numColumns="2"
             android:stretchMode="columnWidth"
             android:verticalSpacing="5dp" />
     </LinearLayout>
