--- a/app/src/main/res/layout-xlarge/fragment_details.xml
+++ b/app/src/main/res/layout-xlarge/fragment_details.xml
@@ -23,7 +23,7 @@
             android:fontFamily="sans-serif-medium"
             android:gravity="fill_horizontal"
             android:textColor="@android:color/white"
-            android:textSize="25sp"
+            android:textSize="35sp"
             android:textStyle="bold"></TextView>
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -31,12 +31,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/txtOriginalTitleMovieDetail"
-            android:background="#ff33b5e5"
+            android:background="#33b5e5"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:paddingLeft="5dp"
             android:paddingRight="5dp">
-
 
 
             <ImageView
@@ -47,15 +46,16 @@
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
 
-                android:minHeight="170dp"
-                android:minWidth="150dp" />
+                android:minHeight="277dp"
+                android:minWidth="185dp" />
+
             <ImageView
                 android:id="@+id/imgBackMovieDetail"
 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:minHeight="170dp"
-                android:minWidth="150dp" />
+                android:minHeight="277dp"
+                android:minWidth="185dp"  />
 
             <Button
                 android:id="@+id/btnFavouriteMovie"
@@ -130,10 +130,10 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_gravity="left"
+                android:backgroundTint="#afa016"
                 android:isIndicator="true"
                 android:numStars="10"
                 android:progressTint="#afa016"
-                android:backgroundTint="#afa016"
                 android:rating="2"
                 android:stepSize="0" />
 
