--- a/app/src/main/res/layout-xlarge/fragment_main.xml
+++ b/app/src/main/res/layout-xlarge/fragment_main.xml
@@ -25,20 +25,20 @@
             android:fontFamily="sans-serif-medium"
             android:gravity="fill_horizontal"
             android:textColor="@android:color/white"
-            android:textSize="25sp"
+            android:textSize="35sp"
             android:textStyle="bold"></TextView>
 
         <GridView
             android:id="@+id/list_view_movies"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal|top"
+            android:layout_gravity="center_horizontal"
             android:background="#33b5e5"
             android:columnWidth="120dp"
             android:gravity="center"
             android:horizontalSpacing="0dp"
             android:listSelector="@android:color/transparent"
-            android:numColumns="auto_fit"
+            android:numColumns="2"
             android:stretchMode="columnWidth"
             android:verticalSpacing="5dp" />
     </LinearLayout>
