--- a/app/src/main/res/layout-large/fragment_main.xml
+++ b/app/src/main/res/layout-large/fragment_main.xml
@@ -25,7 +25,7 @@
             android:fontFamily="sans-serif-medium"
             android:gravity="fill_horizontal"
             android:textColor="@android:color/white"
-            android:textSize="30sp"
+            android:textSize="25sp"
             android:textStyle="bold"></TextView>
 
         <GridView
@@ -42,4 +42,14 @@
             android:stretchMode="columnWidth"
             android:verticalSpacing="5dp" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/movie_spinner"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:background="@drawable/spinner"
+        android:visibility="visible" />
 </FrameLayout>
