--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -42,4 +42,14 @@
             android:stretchMode="columnWidth"
             android:verticalSpacing="5dp" />
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/movie_spinner"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="110dp"
+        android:layout_height="110dp"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:background="@drawable/spinner"
+        android:visibility="gone" />
 </FrameLayout>
