--- a/app/src/main/res/layout-large/fragment_details.xml
+++ b/app/src/main/res/layout-large/fragment_details.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
 
     android:fillViewport="true"
-    android:visibility="visible">
+    android:visibility="invisible">
     <!-- tools:context=".activities.details.DetailsActivity$DetailsFragment"-->
     <RelativeLayout
         android:layout_width="fill_parent"
